# mlops-enterprise

./: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: data_pipeline.yaml  database.yaml
config/environments/: dev.yaml  prod.yaml
docs/: data_pipeline_README.md
examples/: data_pipeline_example.py  simple_pipeline_demo.py  standalone_pipeline_demo.py
mlops_enterprise.egg-info/: PKG-INFO  requires.txt  top_level.txt
notebooks/: 01_data_preprocessing.ipynb
scripts/: download_data.py
src/components/: a_data_extraction.py  b_data_preprocessing.py  b_data_transformation.py
src/config/: config.yaml  data_ingestion.yaml  data_preprocessing.yaml
src/entities/: builders.py  config_entities.py  directors.py
src/entity_builder/: builders.py  directors.py  entities.py
src/exception/: __init__.py
src/infrastructure/: mysql_manager.py
src/logger/: __init__.py
src/mlops_enterprise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pipeline/: data_pipeline.py
src/pipelines/: a_data_extraction_pipeline.py  b_data_transformation_pipeline.py  data_pipeline.py  data_pipeline_simple.py  inference_pipeline.py
src/scripts/: download_data.py
src/sql/: Data aggregation.sql  build_table.sql  data_aggregation.sql  data_aggregation2.sql
src/utils/: config_loader.py  config_utils.py  exception_handler.py  helpers.py  logging_utils.py
tests/: test_data_pipeline.py
tests/unit/test_infrastructure/: test_mysql_manager.py
